<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".AddSchedule">


    <TextView
        android:id="@+id/tx_view_main_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_sch"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tx_view_no_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/no_sch"
        android:textColor="@color/light_red"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcl_select_sch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/app_btn_add_sch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_view_main_title"
        tools:listitem="@layout/item_schedule"

        />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/app_btn_add_sch"
        android:layout_width="180dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/app_btn_back"
        android:text="@string/add_sch"
        android:backgroundTint="@color/light_red"
        android:textColor="@color/white"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/app_btn_back"
        android:layout_width="180dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/back_sch"
        android:backgroundTint="@color/light_red"
        android:textColor="@color/white"
        android:visibility="gone"
        android:layout_marginBottom="100dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>